# Seedelf-Wallet

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE.md  SECURITY.md  aiken.toml  complete_build.sh  package-lock.json  seedelf-init.sh  seedelfwallet.asc  support.asc
app/: README.md  package-lock.json  package.json  tailwind.config.ts
contracts/: always_false_contract.plutus  seedelf_contract.plutus  wallet_contract.plutus
happy-path-scripts/: all_balances.sh
hashes/: always_false.hash  seedelf.hash  wallet.hash
lib/: schnorr.ak  token_name.ak  xor.ak
scripts/: .env  .env.sancho  00_createScriptReferences.sh  README.md  all_balances.sh  create_wallet.sh  send_all.sh  (+2 more)
seedelf-cli/: .gitignore  Cargo.toml  README.md  dist-workspace.toml
seedelf-cli/seedelf-cli/: Cargo.toml  readme.md
seedelf-cli/seedelf-cli/src/: address.rs  display.rs  koios.rs  lib.rs  main.rs  schnorr.rs  transaction.rs  utxos.rs  web_server.rs
seedelf-cli/seedelf-cli/src/commands/: balance.rs  create.rs  fund.rs  remove.rs  sweep.rs  transfer.rs  welcome.rs
seedelf-cli/seedelf-cli/src/commands/util/: age.rs  expose_key.rs  extract.rs  find.rs  history.rs  migrate.rs  mint.rs  mod.rs  statistics.rs
seedelf-cli/seedelf-cli/tests/: convert_test.rs  koios_test.rs  setup_test.rs  transaction_test.rs  utxos_test.rs  version_control_test.rs
seedelf-cli/seedelf-core/: Cargo.toml  README.md
seedelf-cli/seedelf-core/src/: address.rs  assets.rs  constants.rs  data_structures.rs  lib.rs  transaction.rs  utxos.rs
seedelf-cli/seedelf-core/tests/: address_test.rs  assets_test.rs  transaction_test.rs  utxos_test.rs
seedelf-cli/seedelf-crypto/: Cargo.toml  README.md
seedelf-cli/seedelf-crypto/src/: lib.rs  register.rs  schnorr.rs
seedelf-cli/seedelf-crypto/tests/: hashing_test.rs  register_test.rs  schnorr_test.rs
seedelf-cli/seedelf-display/: Cargo.toml  readme.md
seedelf-cli/seedelf-display/src/: display.rs  text_coloring.rs  version_control.rs
seedelf-cli/seedelf-display/tests/: display_test.rs
seedelf-cli/seedelf-koios/: Cargo.toml
seedelf-cli/seedelf-koios/src/: koios.rs  lib.rs
seedelf-cli/src/: address.rs  assets.rs  constants.rs  convert.rs  data_structures.rs  display.rs  hashing.rs  koios.rs  lib.rs  main.rs  private_key.rs  register.rs  schnorr.rs  setup.rs  transaction.rs  utxos.rs  web_server.rs
seedelf-cli/src/commands/: balance.rs  create.rs  fund.rs  mod.rs  remove.rs  seedelf_all.rs  seedelf_new.rs  seedelf_remove.rs  sweep.rs  transfer.rs  update.rs  wallet_info.rs  welcome.rs
seedelf-cli/src/commands/dapp/: balance.rs  mod.rs  sweep.rs
seedelf-cli/src/commands/dapp/newm/: constants.rs  guide.rs  mod.rs  types.rs  view_sale.rs
seedelf-cli/src/commands/util/: age.rs  expose_key.rs  extract.rs  find.rs  find_seedelf.rs  history.rs  migrate.rs  mint.rs  mod.rs  statistics.rs
seedelf-cli/static/: index.css  index.html  index.js
seedelf-cli/tests/: address_test.rs  asset_test.rs  assets_test.rs  convert_test.rs  data_structure_test.rs  display_test.rs  hashing_test.rs  koios_test.rs  register_test.rs  schnorr_test.rs  setup_test.rs  transaction_test.rs  utxos_test.rs  vector_test.rs
seedelf-platform/: .gitignore  Cargo.toml  README.md
seedelf-platform/seedelf-cli/: Cargo.toml
seedelf-platform/seedelf-cli/src/: lib.rs  main.rs  setup.rs  web_server.rs
seedelf-platform/seedelf-cli/src/commands/: balance.rs  create.rs  fund.rs  mod.rs  remove.rs  sweep.rs  transfer.rs  welcome.rs
seedelf-platform/seedelf-cli/src/commands/util/: base.rs  expose_key.rs  extract.rs  find.rs  history.rs  migrate.rs  mint.rs  mod.rs  statistics.rs
seedelf-platform/seedelf-cli/static/: index.css  index.html  index.js
seedelf-platform/seedelf-cli/tests/: data_structure_test.rs  koios_test.rs  metadata_test.rs  setup_test.rs  vector_test.rs
seedelf-platform/seedelf-core/: Cargo.toml
seedelf-platform/seedelf-core/src/: assets.rs  constants.rs  data_structures.rs  lib.rs  metadata.rs  transaction.rs  utxos.rs
seedelf-platform/seedelf-core/tests/: address_test.rs  assets_test.rs  metadata_test.rs
seedelf-platform/seedelf-crypto/: Cargo.toml
seedelf-platform/seedelf-crypto/src/: ecies.rs  hashing.rs  lib.rs  schnorr.rs
seedelf-platform/seedelf-crypto/tests/: convert_test.rs  ecies_test.rs  schnorr_test.rs
seedelf-platform/seedelf-display/: Cargo.toml
seedelf-platform/seedelf-display/src/: display.rs  lib.rs  text_coloring.rs
seedelf-platform/seedelf-display/tests/: version_control_test.rs
seedelf-platform/seedelf-gui/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
seedelf-platform/seedelf-gui/src/: App.tsx  main.tsx
seedelf-platform/seedelf-gui/src-tauri/: Cargo.toml  tauri.conf.json
seedelf-platform/seedelf-gui/src-tauri/capabilities/: default.json
seedelf-platform/seedelf-gui/src-tauri/src/: address.rs  constants.rs  lib.rs  main.rs  session.rs  setup.rs  transaction.rs  types.rs  utxos.rs  wallet.rs  webserver.rs
seedelf-platform/seedelf-gui/src-tauri/src/commands/: create.rs  extract.rs  fund.rs  mod.rs  remove.rs  send.rs
seedelf-platform/seedelf-gui/src/app/: App.tsx
seedelf-platform/seedelf-gui/src/components/: AssetSelectorModal.tsx  Checkbox.tsx  ConfirmationModal.tsx  ExplorerLinkModal.tsx  InputRow.tsx  IntegerField.tsx  LoadingOverlay.tsx  NumberField.tsx  PasswordField.tsx  RefreshIcon.tsx  SeedelfInputRow.tsx  ShowNotification.tsx  TextField.tsx  ToTopButton.tsx  Toggle.tsx  TopNavBar.tsx  WebServerModal.tsx
seedelf-platform/seedelf-gui/src/lib/: useTauriReady.ts
seedelf-platform/seedelf-gui/src/pages/: Landing.tsx  NewWallet.tsx  Wallet.tsx
seedelf-platform/seedelf-gui/src/pages/Wallet/: Dashboard.tsx  Extract.tsx  Fund.tsx  History.tsx  Manage.tsx  Receive.tsx  Send.tsx  Sidebar.tsx  WalletLayout.tsx  api.ts  colors.ts  transactions.ts  util.ts  webServer.ts
seedelf-platform/seedelf-gui/src/styles/: globals.css
seedelf-platform/seedelf-gui/src/types/: layout.ts  network.ts  wallet.ts
seedelf-platform/seedelf-koios/: README.md
seedelf-platform/seedelf-koios/src/: koios.rs
(+175 files in other folders)
