[package]
name = "seedelf-cli"
version = "0.4.1"
edition = "2021"
license = "MIT"
description = "Seedelf: A Cardano Stealth Wallet"
authors = ["Logical Mechanism LLC <support@logicalmechanism.io>"]
repository = "https://github.com/logical-mechanism/Seedelf-Wallet"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
dirs = "5.0"
whoami = "1.5.2"
blstrs = "0.7.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_cbor = "0.11.2"
hex = "0.4.3"
rand_core = { version = "0.6.4", features = ["std"] }
ff = "0.13.0"
blake2 = "0.10.6"
tokio = { version = "1.41.1", features = ["full"] }
reqwest = { version = "0.12.9", features = ["json"] }
pallas-addresses = "0.32.0"
pallas-crypto = "0.32.0"
pallas-codec = "0.32.0"
pallas-txbuilder = "0.32.0"
pallas-traverse = "0.32.0"
pallas-wallet = "0.32.0"
pallas-primitives = "0.32.0"
warp = "0.3.7"
rpassword = "7.3.1"
aes-gcm = "0.10.3"
argon2 = "0.5.3"
base64 = "0.22.1"
colored = "2.2.0"
include_dir = "0.7.4"
cryptoxide = "0.4.4"
sha3 = "0.10.8"
# just for updating from github, this may change when update is fixed
self_update = { version = "0.42.0", features = ["archive-tar", "archive-zip"] }