[package]
name = "seedelf-cli"
version = "0.4.6"
edition = "2024"
license = "MIT"
description = "Seedelf: A Cardano Stealth Wallet"
authors = ["Logical Mechanism LLC <support@logicalmechanism.io>"]
repository = "https://github.com/logical-mechanism/Seedelf-Wallet"

[dependencies]
aes-gcm = "0.10.3"
argon2 = "0.5.3"
base64 = "0.22.1"
blake2 = "0.10.6"
blstrs = "0.7.1"
chrono = "0.4.40"
clap = { version = "4.5.26", features = ["derive"] }
colored = "3.0.0"
cryptoxide = "0.5.0"
dirs = "6.0.0"
ff = "0.13.0"
hex = "0.4.3"
include_dir = "0.7.4"
pallas-addresses = "0.32.0"
pallas-codec = "0.32.0"
pallas-crypto = "0.32.0"
pallas-primitives = "0.32.0"
pallas-traverse = "0.32.0"
pallas-txbuilder = "0.32.0"
pallas-wallet = "0.32.0"
rand_core = { version = "0.6.0", features = ["std"] }
reqwest = { version = "0.12.9", features = ["json"] }
rpassword = "7.3.1"
self_update = { version = "0.42.0", features = ["archive-tar", "archive-zip"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_cbor = "0.11.2"
serde_json = "1.0.133"
sha3 = "0.10.8"
tokio = { version = "1.41.1", features = ["full"] }
warp = "0.3.7"
whoami = "1.5.2"