[workspace]
resolver = "3"
members = [
    "seedelf-cli",
    "seedelf-core",
    "seedelf-crypto", 
    "seedelf-display", 
    "seedelf-koios",
    "seedelf-gui/src-tauri"
]


[workspace.dependencies]
seedelf-core = "0.4.9"
seedelf-crypto = "0.4.9"
seedelf-display = "0.4.9"
seedelf-koios = "0.4.9"


[patch.crates-io]
seedelf-core = { path = "seedelf-core" }
seedelf-crypto = { path = "seedelf-crypto" }
seedelf-display = { path = "seedelf-display" }
seedelf-koios  = { path = "seedelf-koios" }


[workspace.package]
version = "0.4.9"
