[workspace]
resolver = "3"
members = [
    "seedelf-cli",
    "seedelf-core",
    "seedelf-crypto", 
    "seedelf-display", 
    "seedelf-koios",
    "seedelf-gui/src-tauri"
]


[workspace.dependencies]
seedelf-core = "0.4.10"
seedelf-cli = "0.4.10"
seedelf-crypto = "0.4.10"
seedelf-display = "0.4.10"
seedelf-koios = "0.4.10"


[patch.crates-io]
seedelf-core = { path = "seedelf-core" }
seedelf-cli = { path = "seedelf-cli" }
seedelf-crypto = { path = "seedelf-crypto" }
seedelf-display = { path = "seedelf-display" }
seedelf-koios  = { path = "seedelf-koios" }


[workspace.package]
version = "0.4.10"
