[package]
name = "seedelf-crypto"
version = "0.4.7"
edition = "2024"
license = "MIT"
description = "Crypto Packages For Seedelf: A Cardano Stealth Wallet"
authors = ["Logical Mechanism LLC <support@logicalmechanism.io>"]
repository = "https://github.com/logical-mechanism/Seedelf-Wallet"

[dependencies]
anyhow = "1.0.98"
blake2 = "0.10.6"
blstrs = "0.7.1"
cryptoxide = "0.5.0"
ff = "0.13.0"
hex = "0.4.3"
pallas-codec = "0.32.0"
pallas-crypto = "0.32.0"
pallas-primitives = "0.32.0"
pallas-wallet = "0.32.0"
rand_core = { version = "0.6.0", features = ["std"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sha3 = "0.10.8"