[package]
name = "seedelf-koios"
version = "0.4.7"
edition = "2024"
license = "MIT"
description = "Koios Packages For Seedelf: A Cardano Stealth Wallet"
authors = ["Logical Mechanism LLC <support@logicalmechanism.io>"]
repository = "https://github.com/logical-mechanism/Seedelf-Wallet"

[dependencies]
hex = "0.4.3"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
# seedelf stuff
seedelf-crypto = { path = "../seedelf-crypto" }