[package]
name = "seedelf-cli"
version.workspace = true
edition = "2024"
license = "MIT"
description = "Seedelf: A Cardano Stealth Wallet"
authors = ["Logical Mechanism LLC <support@logicalmechanism.io>"]
repository = "https://github.com/logical-mechanism/Seedelf-Wallet"
readme = "../README.md"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.98"
argon2 = "0.5.3"
base64 = "0.22.1"
blake2 = "0.10.6"
blstrs = "0.7.1"
chrono = "0.4.40"
clap = { version = "4.5.26", features = ["derive"] }
colored = "3.0.0"
cryptoxide = "0.5.0"
dirs = "6.0.0"
ff = "0.13.0"
hex = "0.4.3"
include_dir = "0.7.4"
mime = "0.3.17"
mime_guess = "2.0.5"
#pallas-addresses = { git = "https://github.com/logicalmechanism/pallas.git", branch = "adding-aux-data" }
#pallas-codec = { git = "https://github.com/logicalmechanism/pallas.git", branch = "adding-aux-data" }
#pallas-crypto = { git = "https://github.com/logicalmechanism/pallas.git", branch = "adding-aux-data" }
#pallas-primitives = { git = "https://github.com/logicalmechanism/pallas.git", branch = "adding-aux-data" }
#pallas-traverse = { git = "https://github.com/logicalmechanism/pallas.git", branch = "adding-aux-data" }
#pallas-txbuilder = { git = "https://github.com/logicalmechanism/pallas.git", branch = "adding-aux-data" }
#pallas-wallet = { git = "https://github.com/logicalmechanism/pallas.git", branch = "adding-aux-data" }
pallas = { git = "https://github.com/logicalmechanism/pallas.git", branch = "adding-aux-data" }
pallas-addresses = { git = "https://github.com/logicalmechanism/pallas.git", branch = "adding-aux-data" }
pallas-codec = { git = "https://github.com/logicalmechanism/pallas.git", branch = "adding-aux-data" }
pallas-crypto = { git = "https://github.com/logicalmechanism/pallas.git", branch = "adding-aux-data" }
pallas-primitives = { git = "https://github.com/logicalmechanism/pallas.git", branch = "adding-aux-data" }
pallas-traverse = { git = "https://github.com/logicalmechanism/pallas.git", branch = "adding-aux-data" }
pallas-txbuilder = { git = "https://github.com/logicalmechanism/pallas.git", branch = "adding-aux-data" }
pallas-wallet = { git = "https://github.com/logicalmechanism/pallas.git", branch = "adding-aux-data" }
rand_core = { version = "0.6.0", features = ["std"] }
reqwest = { version = "0.12.9", features = ["json"] }
rpassword = "7.3.1"
rust-embed = "8.7.2"
semver = "1.0.26"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sha3 = "0.10.8"
tokio = { version = "1.41.1", features = ["full"] }
warp = "0.3.7"
# seedelf stuff
seedelf-crypto = { workspace = true }
seedelf-core = { workspace = true }
seedelf-display = { workspace = true }
seedelf-koios = { workspace = true }