[package]
name = "seedelf-crypto"
version.workspace = true
edition = "2024"
license = "MIT"
description = "Crypto Packages For Seedelf: A Cardano Stealth Wallet"
authors = ["Logical Mechanism LLC <support@logicalmechanism.io>"]
repository = "https://github.com/logical-mechanism/Seedelf-Wallet"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.98"
base64 = "0.22.1"
blake2 = "0.10.6"
blstrs = "0.7.1"
cryptoxide = "0.5.0"
ff = "0.13.0"
hex = "0.4.3"
pallas-codec = { git = "https://github.com/logicalmechanism/pallas.git", branch = "adding-aux-data" }
pallas-crypto = { git = "https://github.com/logicalmechanism/pallas.git", branch = "adding-aux-data" }
pallas-primitives = { git = "https://github.com/logicalmechanism/pallas.git", branch = "adding-aux-data" }
pallas-wallet = { git = "https://github.com/logicalmechanism/pallas.git", branch = "adding-aux-data" }
rand_core = { version = "0.6.0", features = ["std"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sha3 = "0.10.8"
