[package]
name = "seedelf-gui"
version.workspace = true
edition = "2024"
license = "MIT"
description = "Seedelf GUI: A Cardano Stealth Wallet"
authors = ["Logical Mechanism LLC <support@logicalmechanism.io>"]
repository = "https://github.com/logical-mechanism/Seedelf-Wallet"

[lib]
name = "seedelf_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# seedelf stuff
seedelf-core    = { workspace = true }
seedelf-crypto  = { workspace = true }
seedelf-display = { workspace = true }
seedelf-koios   = { workspace = true }
