[package]
name = "seedelf-gui"
version.workspace = true
edition = "2024"
license = "MIT"
description = "Seedelf GUI: A Cardano Stealth Wallet"
authors = ["Logical Mechanism LLC <support@logicalmechanism.io>"]
repository = "https://github.com/logical-mechanism/Seedelf-Wallet"

[lib]
name = "seedelf_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
blstrs = "0.7.1"
once_cell = "1.21.3"
pallas-addresses = "0.33.0"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2.4.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zeroize = "1.8.1"
# seedelf stuff
seedelf-cli     = { workspace = true }
seedelf-core    = { workspace = true }
seedelf-crypto  = { workspace = true }
seedelf-display = { workspace = true }
seedelf-koios   = { workspace = true }
